--- a/style/style.css
+++ b/style/style.css
@@ -120,6 +120,10 @@ li:hover .sub-menu {
   display: inline-block;
 }
 
+.jumbo-navbar li:hover {
+  border-bottom: 2px solid white;
+}
+
 .jumbo-article {
   display: flex;
 }
@@ -158,17 +162,17 @@ li:hover .sub-menu {
   padding-bottom: 2rem;
 }
 
-.jumbo-right{
+.jumbo-right {
   padding: 3rem 4rem;
 }
 
-.jumbo-right h2{
+.jumbo-right h2 {
   font-weight: 400;
   font-size: 2rem;
   padding-bottom: 3rem;
 }
 
-.jumbo-right span{
+.jumbo-right span {
   font-size: .8rem;
   padding: 3rem 0;
 }
@@ -176,6 +180,61 @@ li:hover .sub-menu {
 .jumbo-right:nth-child(3),
 .jumbo-right:nth-child(4) {
   border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+/* article */
+
+.two-column-article {
+  display: flex;
+  padding-top: 10rem;
+}
+
+.img-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  width: 50vw;
+  height: 50vw;
+}
+
+.image-container {
+  width: 50%;
+  height: 50%;
+  background-color: #0061ff;
+  border: 1px solid #1e1919;
+}
+
+.image-container img {
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.article-container {
+  width: 50vw;
+}
+
+.article{
+  padding: 3rem 10rem
+}
+
+.article h2{
+  font-size: 4rem;
+  font-weight: 400;
+  padding-bottom: 2rem;
+}
+
+.article p{
+  line-height: 1.8rem;
+  padding-bottom: 3rem;
+}
+
+.article .btn{
+  padding: 1rem 2rem;
+}
+
+.article-container img{
+  width: 50%;
+  padding: 3rem;
 }
 
 
