--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* header\ */
@@ -186,7 +186,11 @@ li:hover .sub-menu {
 
 .two-column-article {
   display: flex;
-  padding-top: 10rem;
+  padding: 10rem 0;
+}
+
+.flex-reverse{
+  flex-direction: row-reverse;
 }
 
 .img-wrapper {
@@ -196,11 +200,13 @@ li:hover .sub-menu {
   height: 50vw;
 }
 
+.img-wrapper> img{
+  width: 100%;
+}
+
 .image-container {
   width: 50%;
   height: 50%;
-  background-color: #0061ff;
-  border: 1px solid #1e1919;
 }
 
 .image-container img {
@@ -211,6 +217,7 @@ li:hover .sub-menu {
 
 .article-container {
   width: 50vw;
+  position: relative;
 }
 
 .article{
@@ -224,6 +231,7 @@ li:hover .sub-menu {
 }
 
 .article p{
+  font-weight: bold;
   line-height: 1.8rem;
   padding-bottom: 3rem;
 }
@@ -232,11 +240,19 @@ li:hover .sub-menu {
   padding: 1rem 2rem;
 }
 
-.article-container img{
-  width: 50%;
-  padding: 3rem;
+.article-img{
+  width: 35%;
+  position: absolute;
+  top: 40vw;
+  left: 10%;
 }
 
+.article-img-reverse{
+  width: 35%;
+  position: absolute;
+  top: 40vw;
+  right: 10%;
+}
 
 /* footer */
 
