--- a/style/style.css
+++ b/style/style.css
@@ -131,6 +131,10 @@ li:hover .sub-menu {
   background-color: white;
 }
 
+.jumbo-wrapper{
+  display: flex;
+}
+
 .jumbo-article {
   display: flex;
 }
@@ -139,6 +143,7 @@ li:hover .sub-menu {
   object-fit: cover;
   object-position: center;
   width: 100%;
+  height: 100%;
 }
 
 .column {
@@ -184,8 +189,8 @@ li:hover .sub-menu {
   padding: 3rem 0;
 }
 
-.jumbo-right:nth-child(4),
-.jumbo-right:nth-child(3) {
+.second-row:nth-child(1),
+.second-row:nth-child(2) {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
